Fixed alignment issue on table styling

--- a/style/style.css
+++ b/style/style.css
@@ -232,10 +232,10 @@ body{
 
 	.tableElement a{
 		margin-left:8px;
-		width: 70%;
+		width: 66%;
 	}
 	.projInfo{
-		width: 180px;
+		width: 80%;
 		margin-left:8px;
 	}
 }
